Count for All ids.

--- a/dupidsp.html
+++ b/dupidsp.html
@@ -141,7 +141,7 @@
         <div class="grid-duplicate-ids">
             <pre id="duplicate-ids"></pre>
         </div>
-        <h3  class="grid-all-ids-header">( occurence ) All IDs (duplicate count)</h3>
+        <h3  class="grid-all-ids-header">( occurence ) All IDs (count > 1)</h3>
         <div class="grid-all-ids">
             <pre id="all-ids"></pre>
         </div>
